* closed MYFACES-60 in Jira
* closed MYFACES-77 in Jira
* closed MYFACES-73 in Jira
* closed MYFACES-97 in Jira
* closed MYFACES-98 in Jira
* closed MYFACES-109 in Jira
* closed MYFACES-112 in Jira
* closed MYFACES-125 in Jira
* closed MYFACES-121 in Jira
* closed MYFACES-122 in Jira
* closed MYFACES-126 in Jira
* closed MYFACES-128 in Jira
* closed MYFACES-132 in Jira
----------------------------------------------------------------------
Changes in Release 1.0.8 beta_RC2
* added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
* upgrade the components use the ExtensionsFilter
  this means you don't need to include the myfaces javascripts and style sheets in your app anymore.
* bug fix examples webapp libraries for tomcat version > 5.5
* new x:buffer component
----------------------------------------------------------------------
Changes in Release 1.0.8 beta_RC1
* move to Apache Incubator (root package is now "org.apache.myfaces")
* providing a tld for MyFaces custom components, that still contains
  the 'old' sf-URI name for backward compatibility
* i18n support for Brazilian Portuguese; thanks to Rogerio Pereira
* bug fix #1045363 New <br> and &nbsp; 'feature'
* bug fix MYFACES-9: store iconChildMiddle in component state
* bug fix #1006636 VisibleOnUserRole attribute for x:panelTab tag
* bug fix #1049792 rendered attribute is disabled for commandNavigation
* bug fix #1042890 HtmlNavigationRenderer renders separator for parameters
* bug fix #1046763 Temp jar built at config time not deleted
* bug fix MYFACES-50: JBuilder 2005 fails to load TLD file descriptors
* bug fix #1044663 visibleOnUserRole attribute for navigationMenuItem
* refactor the jar files :
  - myfaces-jsf-api.jar contains the api classes (no change)
  - myfaces-impl.jar contains the standard jsf implementation
  - myfaces-extensions.jar contains the myfaces extensions
  - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above