@@ -38,6 +38,7 @@ Changes in Release 1.0.9
 * closed MYFACES-126 in Jira
 * closed MYFACES-128 in Jira
 * closed MYFACES-132 in Jira
+* add a fallback textarea mode to the htmlEditor
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
 * added a new RenderKit, that renders WML. Thanks to Jiri Zaloudek for his contribution
